# portal

./: .gitignore  app.py  install.sh  portal  portal.py  portal.sh  pyproject.toml  requirements.txt  server.py  uninstall.sh
.portal/: portal.py
.portal/helpers/: tools.py
client/: portal.py  ptest.py  test.py
client/helpers/: check_api.py
env/: pyvenv.cfg
helpers/: .cli.py.swp  choch.py  cli.py  key.py  signup.py  user.py
portal/: .portal.py.swp  user.conf
portal/helpers/: signup.py  tools.py
wompus/: wompus.py
wompus/helpers/: commands.py  signup.py  tools.py  user.py
