[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal"
version = "0.1.0"
description = "Quick file sharing"
authors = [{ name = "Patrick Williamson", email = "upm8pb@virginia.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    # List your project dependencies here
    "requests >= 2.22.0",
    "bcrypt >= 4.0.0",
]

[project.entry-points.console_scripts]
portal = "portal.portal:main"

[tool.setuptools]
packages = ["portal"]
