[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wompus"
version = "0.1.0"
description = "Quick file sharing"
authors = [{ name = "Patrick Williamson", email = "upm8pb@virginia.edu" }]
license = { text = "MIT" }
dependencies = [
    # List your project dependencies here
    "requests >= 2.22.0",
    "bcrypt >= 4.0.0",
]

[project.scripts]
womp = "wompus.wompus:main"
